--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -68,7 +68,7 @@ section.module h2 {
 }
 #POD, #DR, #NOD {
     font-size: 8pt;
-} 
+}
 section.module p {
     margin-bottom: 40px;
     font-size: 16px;
@@ -250,7 +250,7 @@ video {
     margin-top: -150px;
 }
 
-#svg-infographic {
+#odInfographic {
     width: 300px;
     height: 300px;
 }
